Fixed overflow-x

--- a/personal-website/src/components/Skills/Skills.module.css
+++ b/personal-website/src/components/Skills/Skills.module.css
@@ -61,6 +61,6 @@
     }
     .skill{
         width: 100%;
-        max-width: 25rem;
+        max-width: 27rem;
     }
 }
