--- a/personal-website/src/index.css
+++ b/personal-website/src/index.css
@@ -11,8 +11,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100vw;
-  height: 100vh;
   font-size: calc(.2vw + 1rem) !important;
   background-color: whitesmoke;
 }
